--- a/Note Project/index.html
+++ b/Note Project/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes Maker</title>
+    <title>Mr. Keep</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="heading">
+        <h1><i class="fas fa-sticky-note"></i>Mr. Keep</h1>
+    </div>
+
+    <div>
+        
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
