--- a/Note Project/index.html
+++ b/Note Project/index.html
@@ -13,11 +13,17 @@
         <h1><i class="fas fa-sticky-note"></i>Mr. Keep</h1>
     </div>
 
-    <div>
-        
+    <div class="btn-div">
+        <button class="learn-more" class="add" id="add">
+            <span class="circle" aria-hidden="true">
+                <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Add Note</span>
+        </button>
     </div>
-
+   
 
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/c750cf0f1e.js" crossorigin="anonymous"></script>
 </body>
 </html>
